# FastAPI

./: pyproject.toml
FastAPI_lab/: .env  db.py  main.py  pyproject.toml
